refactor: correctly ascending headings

--- a/styles/CommunityPage.module.scss
+++ b/styles/CommunityPage.module.scss
@@ -48,6 +48,7 @@
 .hero {
   z-index: 2;
   font-weight: 800;
+  font-size: 1em;
   line-height: 1.4;
 
   @media (max-width: 640px) {
@@ -55,14 +56,14 @@
     margin-top: 10em;
   }
 
-  h3 {
+  .preTitle {
     font-size: 3.375em;
     letter-spacing: -0.04em;
     color: #454267;
     margin: -0.5em 0;
   }
 
-  h1 {
+  .mainTitle {
     font-size: 4.5em;
     letter-spacing: -0.06em;
     background: linear-gradient(273.07deg, #e95aec 0%, #8793ff 100%);
