--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@
   src: url("/fonts/Manrope-VariableFont_wght.ttf");
   font-weight: 300 800;
   font-style: normal;
+  font-display: fallback;
 }
 
 * {
