--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -148,6 +148,11 @@
       display: flex;
       align-items: center;
       gap: 0.5em;
+
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
     }
 
     .socials {
