chore: set button background to transparent

--- a/components/GuidesWidget/Button/Button.module.scss
+++ b/components/GuidesWidget/Button/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  background-color: rgba(118, 118, 128);
+  background-color: transparent;
   border: none;
   color: #ffffff;
   cursor: pointer;
