--- a/components/GuidesWidget/Button/Button.module.scss
+++ b/components/GuidesWidget/Button/Button.module.scss
@@ -8,18 +8,22 @@
   border-radius: 50px;
   font-weight: 600;
   font-size: 1em;
-  transition: background 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 0.7;
 
   &:hover {
     background-color: #464649;
+    opacity: 0.8;
   }
 }
 
 .active {
   background-color: #59537b;
-  transition: background 0.5s ease-out;
+  transition: background 0.5s ease-out, opacity 0.2s ease-out;
+  opacity: 1;
 
   &:hover {
     background-color: #59537b;
+    opacity: 1;
   }
 }
