fix: main title on two lines

--- a/components/Typography/MainTitle/MainTitle.module.scss
+++ b/components/Typography/MainTitle/MainTitle.module.scss
@@ -9,7 +9,8 @@
   -webkit-text-fill-color: transparent;
 
   @media (max-width: 740px) {
-    line-height: 1;
+    line-height: 1.05;
+    padding-bottom: 1rem;
   }
 }
 
