--- a/styles/DownloadPage.module.scss
+++ b/styles/DownloadPage.module.scss
@@ -14,7 +14,7 @@
     transform: scaleX(2);
     z-index: 0;
 
-    @media (max-width: 740px) {
+    @media (max-width: $mobile-breakpoint) {
       bottom: 37em;
     }
   }
@@ -30,7 +30,7 @@
     border-radius: 0 0 50% 50%;
     transform: scaleX(2);
 
-    @media (max-width: 740px) {
+    @media (max-width: $mobile-breakpoint) {
       bottom: calc(37em + 3px);
     }
   }
@@ -118,7 +118,7 @@
   letter-spacing: -0.02em;
   line-height: 1.125em;
 
-  @media (max-width: 740px) {
+  @media (max-width: $mobile-breakpoint) {
     gap: 1.5em;
     margin-top: 2em;
     width: 100%;
@@ -130,7 +130,7 @@
     justify-content: space-between;
     width: 100%;
 
-    @media (max-width: 740px) {
+    @media (max-width: $mobile-breakpoint) {
       flex-direction: column;
       gap: 1.5em;
     }
@@ -153,7 +153,7 @@
     margin-block: 0.2em;
     background: linear-gradient(90deg, #e0dde8 0%, rgba(210, 197, 255, 0) 50%, #e0dde8 100%);
 
-    @media (max-width: 740px) {
+    @media (max-width: $mobile-breakpoint) {
       order: -1;
       margin-bottom: 2em;
     }
@@ -171,7 +171,7 @@
     letter-spacing: -0.02em;
     color: #45426770;
 
-    @media (max-width: 740px) {
+    @media (max-width: $mobile-breakpoint) {
       flex-direction: column;
       gap: 2em;
     }
@@ -190,7 +190,7 @@
       display: flex;
       gap: 1.25em;
 
-      @media (max-width: 740px) {
+      @media (max-width: $mobile-breakpoint) {
         flex-direction: column;
         text-align: center;
         order: -1;
