--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -4,7 +4,7 @@
   min-height: 50em;
   max-height: 1450px;
 
-  @media (max-width: 740px) {
+  @media (max-width: $mobile-breakpoint) {
     height: min-content;
   }
 
@@ -32,7 +32,7 @@
   position: relative;
   padding-inline: 2em;
 
-  @media (max-width: 740px) {
+  @media (max-width: $mobile-breakpoint) {
     margin-top: 2.5em;
   }
 }
@@ -43,7 +43,7 @@
   margin-bottom: 5em;
   padding-inline: 5em;
 
-  @media (max-width: 740px) {
+  @media (max-width: $mobile-breakpoint) {
     margin-bottom: 1em;
     padding-inline: 1em;
   }
@@ -64,7 +64,7 @@
     margin-right: -4vw;
     width: 4em;
 
-    @media (max-width: 740px) {
+    @media (max-width: $mobile-breakpoint) {
       margin-right: 1em;
     }
   }
@@ -81,7 +81,7 @@
 
   z-index: 1;
 
-  @media (max-width: 740px) {
+  @media (max-width: $mobile-breakpoint) {
     display: flex;
     gap: 1em;
   }
@@ -104,7 +104,7 @@
   left: 50%;
   z-index: 2;
 
-  @media (max-width: 740px) {
+  @media (max-width: $mobile-breakpoint) {
     display: none;
   }
 }
