--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,2 +1,18 @@
 // Breakpoints
+$small-mobile-breakpoint: 640px;
 $mobile-breakpoint: 740px;
+$tablet-breakpoint: 978px;
+$small-height: 1000px;
+$large-height: 1200px;
+
+// Colors
+$white: #ffffff;
+$accent: #7b59e9;
+$dark: #0d0a2c;
+$three: #454267;
+
+$highlight-clr-dark: #785bb6;
+$highlight-bg-dark: #dcd6fb;
+
+$highlight-clr-light: #ffffff;
+$highlight-bg-light: #6d57a1;
