--- a/components/Typography/MainTitle/MainTitle.module.scss
+++ b/components/Typography/MainTitle/MainTitle.module.scss
@@ -1,5 +1,9 @@
 .title {
-  animation: text-appearence 0.5s ease-out 0.6s both;
+  animation-name: text-appearence-title;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 0.6s;
+  animation-fill-mode: both;
   background-clip: text;
   background-image: linear-gradient(89.78deg, #704ee2 0.15%, #926ff7 99.81%);
   font-size: 5em;
@@ -15,7 +19,11 @@
 }
 
 .subtitle {
-  animation: text-appearence 1s ease-out 0.7s both;
+  animation-name: text-appearence-subtitle;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  animation-delay: 0.6s;
+  animation-fill-mode: both;
   color: #454267;
   font-size: max(1rem, 1.4em);
   font-weight: 700;
@@ -25,7 +33,7 @@
   text-align: center;
 }
 
-@keyframes text-appearence {
+@keyframes text-appearence-title {
   0% {
     opacity: 0;
     transform: translate(0, 30%);
@@ -33,5 +41,14 @@
   100% {
     opacity: 1;
     transform: translate(0, 0);
+  }
+}
+
+@keyframes text-appearence-subtitle {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
