chore: destination margin fix in Safari

--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -63,6 +63,10 @@
     width: 105%;
   }
 
+  .cardsContainer {
+    margin-bottom: 2em;
+  }
+
   .icons {
     display: flex;
     flex-direction: column;
