--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -53,7 +53,7 @@
 
     font-size: clamp(13px, 1.125vw, 16px);
     margin-inline: auto;
-    margin-top: 2em; // TODO: in progress
+    margin-top: 2em;
     width: 6em;
   }
 
