fix: temporary adjustment of page description

--- a/styles/DestinationsPage.module.scss
+++ b/styles/DestinationsPage.module.scss
@@ -102,25 +102,12 @@
     text-align: center;
   }
 
-  .preTitle {
-    font-size: 3.375em;
-    letter-spacing: -0.04em;
-    margin: -0.5em 0;
-  }
-
-  .mainTitle {
-    font-size: 4.5em;
-    letter-spacing: -0.06em;
-    background: linear-gradient(273.07deg, #e95aec 0%, #8793ff 100%);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
   .heroDescription {
     font-size: 1.5em;
     font-weight: 600;
     line-height: 1.5;
     letter-spacing: -0.04em;
     width: 20em;
+    margin-top: 0.5em; // TODO: remove this fix when proper components are introduced
   }
 }
