--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -1,27 +1,19 @@
 .welcomePage {
-  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
   height: 100vh;
   min-height: 50em;
   max-height: 1450px;
+  z-index: 1;
+}
 
-  @media (max-width: $mobile-breakpoint) {
-    height: min-content;
-  }
-
-  &::after {
-    content: "";
-    font-size: clamp(13px, 1.125vw, 16px);
-    background-image: url("/assets/white-curve3x.png");
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -1px;
-    height: 22vh;
-    z-index: 2;
-  }
+.purpleConainer {
+  background: linear-gradient(180deg, #ffffff 50%, #dfd7ff 100%);
+  border-radius: 0% 0% 50% 50%;
+  transform: scaleX(2);
+  overflow: hidden;
+  height: 90%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .container {
@@ -31,6 +23,8 @@
   grid-template-rows: 1fr auto;
   position: relative;
   padding-inline: 2em;
+  transform: scaleX(0.5);
+  margin-inline: auto;
 
   @media (max-width: $mobile-breakpoint) {
     margin-top: 2.5em;
@@ -78,7 +72,7 @@
   flex-direction: column;
   gap: 3em;
   padding-inline: 2em;
-  margin-bottom: 5vh;
+  margin-bottom: -5em;
 
   z-index: 1;
 
@@ -93,6 +87,7 @@
   }
 
   .iphone {
+    margin-bottom: 3em;
     animation: iphone-appearence 1s cubic-bezier(0, 0.6, 0.32, 1) 0.1s both;
   }
 }
@@ -107,6 +102,47 @@
 
   @media (max-width: $mobile-breakpoint) {
     display: none;
+  }
+}
+
+.qrcode {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  gap: 0.5em;
+
+  z-index: 3;
+  font-size: 1.2em;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 2em;
+
+  width: 90%;
+  max-width: 1280px;
+  margin-inline: auto;
+
+  animation: text-appearence 1s ease-out 0.7s both;
+
+  @media (max-width: $mobile-breakpoint) {
+    display: none;
+  }
+
+  .qrText {
+    font-weight: 600;
+    margin-right: -0.75em;
+    font-size: 1em;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #454267;
+  }
+
+  .diagonalArrow {
+    margin-bottom: 1.25em;
+    margin-right: 0.5em;
+    width: 1em;
+    aspect-ratio: 1;
   }
 }
 
