--- a/components/Common/IphoneGroup.module.scss
+++ b/components/Common/IphoneGroup.module.scss
@@ -6,7 +6,7 @@
   justify-items: center;
   align-items: center;
   height: min-content;
-  align-self: flex-end;
+  width: 100%;
 
   @media (max-width: $tablet-breakpoint) {
     font-size: 0.8rem;
